Increases the height of the wufoo iframe to prevent clipping.

--- a/ui/less/styles.less
+++ b/ui/less/styles.less
@@ -257,6 +257,6 @@ LETTERS
 
 .ie{
   iframe{
-    height: 600px;
+    height: 800px;
   }
 }
